# fluidsht

./: .gitlab-ci.yml  .hgignore  .hgtags  AUTHORS.rst  CHANGES.rst  Makefile  README.rst  bitbucket-pipelines.yml  config.py  setup.cfg  setup.py  setup_build.py  tox.ini
.ci/: deploy_pypi.sh  install_shtns.sh  install_shtns_user.sh
doc/: conf.py  environment.yml  index.rst  install.rst  learn.rst
doc/install/: VERSIONS.sh  install_shtns.sh  sht_libs.rst
fluidsht/: __init__.py  _version.py  compat.py  util.py
fluidsht/sht2d/: __init__.py  _try_compare_shtools_shtns.py  _try_with_shtools.py  operators.py  tests.py  with_shtns.py
