[metadata]
name = fluidsht
description = Spherical Harmonics Transform API
long_description = file: README.rst
keywords = spherical harmonics, shtns, shtools
author = "FluidDyn Developers"
author_email = "fluiddyn@freelists.org"
license = CeCILL License
classifiers =
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
install_requires = 
    pyshtools
    fluidpythran>=0.1.4
    fluiddyn
    cached_property ; python_version < '3.8'
    # shtns

# [options.extras_require]
# plot =
#     cartopy
#     gmt-python

[flake8]
ignore = E501,E225,E226,E303,E201,E202,E203,W503

[coverage:run]
source = ./fluidsht
data_file = .coverage/coverage
omit = */test*.py
       */_try_*.py

[coverage:report]
show_missing = True
exclude_lines =
    raise ValueError
    raise NotImplementedError
    raise ImportError
    except ImportError:
    except ModuleNotFoundError:
    except IndexError:
    except AttributeError:
    except KeyError:
    except ValueError
    if test:
    if check:
    if __name__ == "__main__":
    if "sphinx" in sys.modules:

[coverage:html]
directory = .coverage

[coverage:xml]
output = .coverage/coverage.xml
